# polybench-gpu-wasm

./: .gitignore  CMakeLists.txt  bin2c.py
CUDA/2DCONV/: 2DConvolution.cu
CUDA/2MM/: 2mm.cu
CUDA/3DCONV/: 3DConvolution.cu
CUDA/3MM/: 3mm.cu
CUDA/ADI/: adi.cu
CUDA/ATAX/: atax.cu
CUDA/BICG/: bicg.cu
CUDA/CORR/: correlation.cu
CUDA/COVAR/: covariance.cu
CUDA/DOITGEN/: doitgen.cu
CUDA/FDTD-2D/: fdtd2d.cu
CUDA/GEMM/: gemm.cu
CUDA/GEMVER/: gemver.cu
CUDA/GESUMMV/: gesummv.cu
CUDA/GRAMSCHM/: gramschmidt.cu
CUDA/JACOBI1D/: jacobi1D.cu
CUDA/JACOBI2D/: jacobi2D.cu
CUDA/LU/: lu.cu
CUDA/MVT/: mvt.cu
CUDA/SYR2K/: syr2k.cu
CUDA/SYRK/: syrk.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/2DCONV/: 2DConvolution.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/2MM/: 2mm.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/3DCONV/: 3DConvolution.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/3MM/: 3mm.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/ADI/: adi.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/ATAX/: atax.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/BICG/: bicg.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/CORR/: correlation.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/COVAR/: covariance.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/DOITGEN/: doitgen.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/FDTD-2D/: fdtd2d.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/GEMM/: gemm.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/GEMVER/: gemver.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/GESUMMV/: gesummv.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/GRAMSCHM/: gramschmidt.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/JACOBI1D/: jacobi1D.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/JACOBI2D/: jacobi2D.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/LU/: lu.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/MVT/: mvt.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/SYR2K/: syr2k.cu
polybenchCodesCudaOpenClHMPPOpenAcc/CUDA/SYRK/: syrk.cu
